# normfs

./: .gitignore  Cargo.toml  LICENSE  README.md  go.work
normfs/: Cargo.toml  build.rs
normfs-cloud/: Cargo.toml
normfs-cloud/src/: cache.rs  client.rs  downloader.rs  errors.rs  lib.rs  offloader.rs  paths.rs
normfs-cloud/tests/: minio_integration_test.rs
normfs-crypto/: Cargo.toml
normfs-crypto/src/: crypto.rs  lib.rs  seed.rs
normfs-store/: Cargo.toml
normfs-store/benches/: read_performance.rs
normfs-store/src/: compression.rs  header.rs  header_test.rs  lib.rs  parser.rs  ranges.rs  signature_test.rs  writer.rs
normfs-types/: Cargo.toml
normfs-types/src/: lib.rs  queue_id_test.rs
normfs-wal/: Cargo.toml
normfs-wal/src/: ack_file_writer.rs  ack_file_writer_test.rs  errors.rs  lib.rs  reader.rs  reader_test.rs  wal_entry.rs  wal_entry_test.rs  wal_header.rs  wal_header_test.rs  writer.rs  writer_buffer.rs  writer_test.rs
normfs/benches/: latency_benchmark.rs  parallel_tail_benchmark.rs  read_benchmark.rs  read_benchmark_compressed_encrypted.rs  subscribe_benchmark.rs  write_benchmark.rs  write_benchmark_compressed_encrypted.rs
normfs/src/: config.rs  lib.rs  lookup.rs
normfs/src/mem/: mod.rs  tests.rs
normfs/src/offload/: disk_monitor.rs  mod.rs
normfs/src/proto/: .gitignore  normfs.rs
normfs/src/reader_fsm/: fsm.rs  mod.rs
normfs/src/server/: client_handler.rs  command_processor.rs  mod.rs  websocket.rs
normfs/tests/: instance_id_test.rs  recovery_test.rs  repeated_read_test.rs  signature_test.rs  step_read_test.rs
normfs_go/: README.md  api.go  client.go  gen.go  go.mod  multi_client.go  stream.go
normfs_go/bench/: Makefile  README.md  benchmark_test.go  go.mod  go.sum  latency.go
normfs_go/bench/cmd/benchmark/: main.go
normfs_go/pb/normfs/: normfs.pb2.go
normfs_go/uintn/: uintn.go  uintn_test.go
uintn-rs/: Cargo.toml
uintn-rs/benches/: uintn_bench.rs
uintn-rs/src/: containers.rs  lib.rs  paths.rs  paths_test.rs  tests.rs
