[package]
name = "normfs-cloud"
version = "0.1.0-beta.0"
edition = "2024"

[dependencies]
rusty-s3 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
urlencoding = "2.1"
uintn = { path = "../uintn-rs" }
normfs-types = { path = "../normfs-types" }
normfs-store = { path = "../normfs-store" }
normfs-wal = { path = "../normfs-wal" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
log = "0.4"

[dev-dependencies]
env_logger = { workspace = true }
uuid = { version = "1", features = ["v4"] }