[package]
name = "normfs-crypto"
version = "0.1.0-beta.0"
edition = "2021"

[dependencies]
normfs-types = { path = "../normfs-types" }
uintn = { path = "../uintn-rs" }
bytes = "1"
getrandom = { version = "0.2", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core"] }

[dev-dependencies]
tempfile = "3"
