[package]
name = "normfs-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Compressed and encrypted persistent storage for NormFS"

[features]
default = ["c-libs"]
c-libs = ["dep:zstd"]
pure-rust = ["dep:ruzstd"]

[dependencies]
log = "0.4"
uintn = { version = "0.1.0-beta.0", path = "../uintn-rs" }
normfs-types = { version = "0.1.0-beta.0", path = "../normfs-types" }
normfs-crypto = { version = "0.1.0-beta.0", path = "../normfs-crypto" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
normfs-wal = { version = "0.1.0-beta.0", path = "../normfs-wal" }
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Compression libraries - C bindings (default, faster for zstd)
zstd = { version = "0.13.1", optional = true, default-features = false }

# Compression libraries - Pure Rust (for platforms like FreeBSD)
ruzstd = { version = "0.8", optional = true }

# XZ/LZMA - Pure Rust for both features (no C dependency)
lzma-rust2 = "0.16"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "read_performance"
harness = false