[package]
name = "normfs-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core type definitions and serialization for NormFS"

[dependencies]
bytes = "1.5"
uintn = { version = "0.1.0-beta.0", path = "../uintn-rs" }
