[package]
name = "normfs-wal"
version = "0.1.0-beta.0"
edition = "2024"

[dependencies]
log = "0.4"
bytes = "1"
uintn = { path = "../uintn-rs" }
normfs-types = { path = "../normfs-types" }
tokio = { version = "1", features = ["full"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
env_logger = { workspace = true }
rand = "0.8"