[package]
name = "uintn"
version = "0.1.0-beta.0"
edition = "2024"

[dependencies]
dashu-int = "0.4.1"
hex = "0.4"
bytes = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
criterion = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = { workspace = true }

[[bench]]
name = "uintn_bench"
harness = false