[package]
name = "uintn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Variable-width unsigned integers with infinite scaling (u8, u16, u32, u64, BigInt)"

[dependencies]
dashu-int = "0.4.1"
hex = "0.4"
bytes = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
criterion = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = { workspace = true }

[[bench]]
name = "uintn_bench"
harness = false